--- a/assets/output.css
+++ b/assets/output.css
@@ -611,9 +611,6 @@
   .x\:mx-auto {
     margin-inline: auto !important;
   }
-  .x\:mt-1 {
-    margin-top: calc(var(--x-spacing) * 1) !important;
-  }
   .x\:mt-2 {
     margin-top: calc(var(--x-spacing) * 2) !important;
   }
@@ -622,9 +619,6 @@
   }
   .x\:mt-8 {
     margin-top: calc(var(--x-spacing) * 8) !important;
-  }
-  .x\:mt-auto {
-    margin-top: auto !important;
   }
   .x\:mb-4 {
     margin-bottom: calc(var(--x-spacing) * 4) !important;
@@ -755,6 +749,15 @@
   .x\:w-\[14rem\] {
     width: 14rem !important;
   }
+  .x\:w-\[50rem\] {
+    width: 50rem !important;
+  }
+  .x\:w-\[120px\] {
+    width: 120px !important;
+  }
+  .x\:w-\[200px\] {
+    width: 200px !important;
+  }
   .x\:w-\[21\.875rem\] {
     width: 21.875rem !important;
   }
@@ -764,26 +767,17 @@
   .x\:w-\[32rem\] {
     width: 32rem !important;
   }
-  .x\:w-\[35rem\] {
-    width: 35rem !important;
-  }
-  .x\:w-\[50rem\] {
-    width: 50rem !important;
-  }
   .x\:w-\[70\%\] {
     width: 70% !important;
   }
-  .x\:w-\[70rem\] {
-    width: 70rem !important;
-  }
-  .x\:w-\[120px\] {
-    width: 120px !important;
-  }
-  .x\:w-\[200px\] {
-    width: 200px !important;
-  }
   .x\:w-\[350px\] {
     width: 350px !important;
+  }
+  .x\:w-\[35rem\] {
+    width: 35rem !important;
+  }
+  .x\:w-\[70rem\] {
+    width: 70rem !important;
   }
   .x\:w-\[calc\(33\.333\%-1\.5rem\)\] {
     width: calc(33.333% - 1.5rem) !important;
@@ -933,12 +927,6 @@
   .x\:gap-y-\[20px\] {
     row-gap: 20px !important;
   }
-  .x\:self-end {
-    align-self: flex-end !important;
-  }
-  .x\:justify-self-end {
-    justify-self: flex-end !important;
-  }
   .x\:overflow-hidden {
     overflow: hidden !important;
   }
@@ -1057,9 +1045,6 @@
   }
   .x\:object-cover {
     object-fit: cover !important;
-  }
-  .x\:p-1 {
-    padding: calc(var(--x-spacing) * 1) !important;
   }
   .x\:p-2 {
     padding: calc(var(--x-spacing) * 2) !important;
@@ -1225,10 +1210,6 @@
   .x\:font-bold {
     --tw-font-weight: var(--x-font-weight-bold) !important;
     font-weight: var(--x-font-weight-bold) !important;
-  }
-  .x\:font-light {
-    --tw-font-weight: var(--x-font-weight-light) !important;
-    font-weight: var(--x-font-weight-light) !important;
   }
   .x\:font-medium {
     --tw-font-weight: var(--x-font-weight-medium) !important;
@@ -1603,6 +1584,16 @@
   .no-scrollbar {
     -ms-overflow-style: none;
     scrollbar-width: none;
+  }
+}
+@layer base {
+  .profile__order-img-wrap {
+    min-height: 100px !important;
+    min-width: 100px !important;
+  }
+  .profile__order-img {
+    height: 100% !important;
+    width: 100% !important;
   }
 }
 @keyframes spin {
